SET(SOURCES components/ui_comp_batterygroup.c
    components/ui_comp_buttondown.c
    components/ui_comp_buttonround.c
    components/ui_comp_buttontop.c
    components/ui_comp_dailymissiongroup.c
    components/ui_comp_dategroup.c
    components/ui_comp_forecastgroup.c
    components/ui_comp_pulsegroup.c
    components/ui_comp_stepgroup.c
    components/ui_comp_titlegroup.c
    components/ui_comp_todayweathergroup.c
    components/ui_comp_weathergroup1.c
    components/ui_comp.c
    screens/ui_watch_analog.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_bg1_png.c
    images/ui_img_flash_png.c
    images/ui_img_weather_sun_cloud_png.c
    images/ui_img_step_png.c
    images/ui_img_daily_mission_png.c
    images/ui_img_call1_png.c
    images/ui_img_btn_bg_1_png.c
    images/ui_img_weather_png.c
    images/ui_img_btn_bg_3_png.c
    images/ui_img_clockwise_sec_png.c
    images/ui_img_clockwise_min_png.c
    images/ui_img_clockwise_hour_png.c
    images/ui_img_bg2_png.c
    images/ui_img_bg3_png.c
    images/ui_img_btn_bg_2_png.c
    images/ui_img_call2_png.c
    images/ui_img_heart2_png.c
    images/ui_img_s1_png.c
    images/ui_img_s2_png.c
    images/ui_img_s3_png.c
    images/ui_img_s4_png.c
    images/ui_img_s5_png.c
    images/ui_img_s6_png.c
    images/ui_img_s7_png.c
    images/ui_img_s8_png.c
    images/ui_img_s9_png.c
    images/ui_img_wave1_png.c
    images/ui_img_wave2_png.c
    fonts/ui_font_H1.c
    fonts/ui_font_Number_big.c
    fonts/ui_font_Number_extra.c
    fonts/ui_font_Subtitle.c
    fonts/ui_font_Title.c)

    idf_component_register(SRCS  ${SOURCES}
    INCLUDE_DIRS "."
    REQUIRES lvgl)
